@@ -8,6 +8,8 @@ VERSION 2.3.2:
   Added configuration option to prefer vanilla implementation where
 	possible.
 
+  Fix to Barrier (Michael Doppler)
+
 VERSION 2.3.1:
 
   Bug with PoolExecutor/ConcurrentExecutor not automatically canceling
